# programmiersprachen-aufgabe-1

./: CMakeLists.txt  README.md
source/: Abgabe_1.cpp  CMakeLists.txt  checksum.cpp  factorial.cpp  fract.cpp  is_prime.cpp  kgV20.cpp  mile_to_kilometer.cpp  sum_multiples.cpp  surf.cpp  tests.cpp  volume.cpp
