#target_link_libraries(helloworld my_own_library)
project(abgabe)


add_executable(tests tests.cpp)


add_executable(kgV20 kgV20.cpp)

add_executable(checksum checksum.cpp)
add_executable(factorial factorial.cpp)
add_executable(fract fract.cpp)
add_executable(is_prime is_prime.cpp)
add_executable(sum_multiples sum_multiples.cpp)
add_executable(surf surf.cpp)
add_executable(volume volume.cpp)



add_executable(mile_to_kilometer.cpp mile_to_kilometer.cpp)
